Fixed text-overflow on Shortcuts banner

--- a/src/styles/_modules/banner.scss
+++ b/src/styles/_modules/banner.scss
@@ -34,12 +34,18 @@
 
         &:first-child {
             width: rem(40px);
+            max-width: 20%;
+        }
+
+        &:nth-child(2) {
+            max-width: 50%;
         }
 
         &:last-child {
             margin-top: rem(6.4px);
             margin-left: auto;
             float: right;
+            max-width: 35%;
             justify-content: flex-end;
         }
     }
@@ -56,6 +62,9 @@
         display: block;
         color: #ccc;
         font-weight: 400;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
     a {
