--- a/src/styles/_modules/modals.scss
+++ b/src/styles/_modules/modals.scss
@@ -97,7 +97,7 @@ sup {
             display: inline-block;
             min-width: auto;
             font-weight: 400;
-            line-height: 1.5;
+            line-height: 1.67;
             text-align: center;
             text-decoration: none;
             border: none;
